--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,13 @@
 /*All rules for Space Tourism*/
 /* Last rule wins // most specific rule wins */
 
+/* Custom Properties */
+:root {
+    --med-blue: #2b315e;
+    --dark-blue: #101439;
+    --gold: #ffbc61;
+}
+
 
 
 /* NORMALIZING RULES*/
@@ -52,6 +59,14 @@ header {
     grid-template-columns: 1fr 1fr 1fr;
     text-align: center;
     align-items: end;
+}
+
+.scooter {
+    transition: 1s;
+}
+
+.scooter:hover {
+    transform: rotate(30deg);
 }
 
 .center-column {
@@ -135,6 +150,7 @@ h3 {
     border-radius: 15px;
     display: inline-block;
     transition: .5s background-color, color;
+    text-shadow: 1px 1px 1px rgba(0,0,0,.25);
 }
 
 .button-gold {
