--- a/css/style.css
+++ b/css/style.css
@@ -37,6 +37,13 @@ body {
 
 header {
     background: #585C7C;
+    position: fixed;
+    z-index: 9;
+    width: 100%;
+}
+
+main {
+    padding-top: 148px;
 }
 
 .pg-padding {
@@ -51,6 +58,7 @@ header {
     display: grid;
     grid-template-columns: 3fr 2fr 1fr;
     grid-gap: 50px;
+    position: relative;
 }
 
 .gold-bkg {
@@ -96,7 +104,7 @@ header {
     align-items: center;
 }
 
-.primary-nav ul{
+.primary-nav ul {
     margin: 0;
     padding: 0;
     list-style: none;
@@ -107,6 +115,7 @@ header {
 .primary-nav ul li {
     padding-left: 20px;
 }
+
 .primary-nav ul a {
     color: white;
     text-decoration: none;
@@ -150,11 +159,14 @@ h3 {
     border-radius: 15px;
     display: inline-block;
     transition: .5s background-color, color;
-    text-shadow: 1px 1px 1px rgba(0,0,0,.25);
+    text-shadow: 1px 1px 1px rgba(0, 0, 0, .25);
 }
 
 .button-gold {
     background: #ffb859;
+    position: absolute;
+    bottom: 20px;
+    right: 20px;
 }
 
 .button-gold:hover {
