--- a/css/style.css
+++ b/css/style.css
@@ -181,3 +181,47 @@ h3 {
 .button-blue:hover {
     background-color: #101439;
 }
+
+@media screen and (max-width: 800px) {
+    header {
+        background: pink;
+    }
+
+    .feature {
+        grid-template-columns: 1fr;
+        grid-gap: 10px;
+    }
+
+    .feature>div:first-child {
+        max-width: 500px;
+    }
+}
+
+@media screen and (max-width:700px) {
+    .gold-bkg {
+        grid-template-columns: 1fr;
+    }
+
+    .center-column {
+        grid-column: 1;
+    }
+
+    .other-trips {
+        grid-template-columns: 1fr;
+        text-align: center;
+        grid-gap: 0;
+    }
+
+    .other-trips>div:nth-child(3) {
+        grid-column: 1;
+        grid-row: 3;
+        margin-top: 80px;
+    }
+
+    .other-trips>div:nth-child(4) {
+        grid-column: 1;
+        text-align: center;
+    }
+
+
+}
